Load build time index for search
- Adds referential XAML names to components of interest.
- Adds a script that generates the build time entries to be loaded
- Invokes the script in Editor.vcxproj

--- a/src/cascadia/TerminalSettingsEditor/AddProfile.xaml
+++ b/src/cascadia/TerminalSettingsEditor/AddProfile.xaml
@@ -37,7 +37,8 @@
             </Button>
         </Border>
         <StackPanel Margin="{StaticResource StandardControlMargin}">
-            <local:SettingContainer x:Uid="AddProfile_Duplicate">
+            <local:SettingContainer x:Uid="AddProfile_Duplicate"
+                                    x:Name="DuplicateProfile">
                 <ComboBox x:Name="Profiles"
                           AutomationProperties.AccessibilityView="Content"
                           ItemsSource="{x:Bind State.Settings.AllProfiles, Mode=OneWay}"
