--- a/src/cascadia/TerminalSettingsEditor/Appearances.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Appearances.xaml
@@ -72,8 +72,8 @@
                        Style="{StaticResource TextBlockSubHeaderStyle}" />
             <!--  Color Scheme  -->
             <!--  This currently only display the Dark color scheme, even if the user has a pair of schemes set.  -->
-            <local:SettingContainer x:Uid="Profile_ColorScheme"
-                                    x:Name="ColorScheme"
+            <local:SettingContainer x:Name="ColorScheme"
+                                    x:Uid="Profile_ColorScheme"
                                     ClearSettingValue="{x:Bind Appearance.ClearColorScheme}"
                                     CurrentValueAccessibleName="{x:Bind Appearance.CurrentColorScheme.Name, Mode=OneWay}"
                                     HasSettingValue="{x:Bind Appearance.HasDarkColorSchemeName, Mode=OneWay}"
@@ -281,20 +281,20 @@
                               IsChecked="{x:Bind ShowAllFonts, Mode=TwoWay}" />
                 </StackPanel>
             </local:SettingContainer>
-            <local:SettingContainer x:Uid="Profile_MissingFontFaces"
-                                    x:Name="MissingFontFaces"
+            <local:SettingContainer x:Name="MissingFontFaces"
+                                    x:Uid="Profile_MissingFontFaces"
                                     HelpText="{x:Bind Appearance.MissingFontFaces, Mode=OneWay}"
                                     Style="{StaticResource SettingContainerErrorStyle}"
                                     Visibility="{x:Bind mtu:Converters.StringNotEmptyToVisibility(Appearance.MissingFontFaces), Mode=OneWay}" />
-            <local:SettingContainer x:Uid="Profile_ProportionalFontFaces"
-                                    x:Name="ProportionalFontFaces"
+            <local:SettingContainer x:Name="ProportionalFontFaces"
+                                    x:Uid="Profile_ProportionalFontFaces"
                                     HelpText="{x:Bind Appearance.ProportionalFontFaces, Mode=OneWay}"
                                     Style="{StaticResource SettingContainerWarningStyle}"
                                     Visibility="{x:Bind mtu:Converters.StringNotEmptyToVisibility(Appearance.ProportionalFontFaces), Mode=OneWay}" />
 
             <!--  Font Size  -->
-            <local:SettingContainer x:Uid="Profile_FontSize"
-                                    x:Name="FontSize"
+            <local:SettingContainer x:Name="FontSize"
+                                    x:Uid="Profile_FontSize"
                                     ClearSettingValue="{x:Bind Appearance.ClearFontSize}"
                                     HasSettingValue="{x:Bind Appearance.HasFontSize, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.FontSizeOverrideSource, Mode=OneWay}"
@@ -310,8 +310,8 @@
             </local:SettingContainer>
 
             <!--  Line Height  -->
-            <local:SettingContainer x:Uid="Profile_LineHeight"
-                                    x:Name="LineHeight"
+            <local:SettingContainer x:Name="LineHeight"
+                                    x:Uid="Profile_LineHeight"
                                     ClearSettingValue="{x:Bind Appearance.ClearLineHeight}"
                                     HasSettingValue="{x:Bind Appearance.HasLineHeight, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.LineHeightOverrideSource, Mode=OneWay}"
@@ -327,8 +327,8 @@
             </local:SettingContainer>
 
             <!--  Cell Width  -->
-            <local:SettingContainer x:Uid="Profile_CellWidth"
-                                    x:Name="CellWidth"
+            <local:SettingContainer x:Name="CellWidth"
+                                    x:Uid="Profile_CellWidth"
                                     ClearSettingValue="{x:Bind Appearance.ClearCellWidth}"
                                     HasSettingValue="{x:Bind Appearance.HasCellWidth, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.CellWidthOverrideSource, Mode=OneWay}"
@@ -344,8 +344,8 @@
             </local:SettingContainer>
 
             <!--  Font Weight  -->
-            <local:SettingContainer x:Uid="Profile_FontWeight"
-                                    x:Name="FontWeight"
+            <local:SettingContainer x:Name="FontWeight"
+                                    x:Uid="Profile_FontWeight"
                                     ClearSettingValue="{x:Bind Appearance.ClearFontWeight}"
                                     HasSettingValue="{x:Bind Appearance.HasFontWeight, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.FontWeightOverrideSource, Mode=OneWay}"
@@ -381,8 +381,8 @@
                     </Grid>
                 </StackPanel>
             </local:SettingContainer>
-            <local:SettingContainer x:Uid="Profile_FontAxes"
-                                    x:Name="FontAxes"
+            <local:SettingContainer x:Name="FontAxes"
+                                    x:Uid="Profile_FontAxes"
                                     ClearSettingValue="{x:Bind Appearance.ClearFontAxes}"
                                     HasSettingValue="{x:Bind Appearance.HasFontAxes, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.FontAxesOverrideSource, Mode=OneWay}"
@@ -409,8 +409,8 @@
                     </muxc:DropDownButton>
                 </StackPanel>
             </local:SettingContainer>
-            <local:SettingContainer x:Uid="Profile_FontFeatures"
-                                    x:Name="FontFeatures"
+            <local:SettingContainer x:Name="FontFeatures"
+                                    x:Uid="Profile_FontFeatures"
                                     ClearSettingValue="{x:Bind Appearance.ClearFontFeatures}"
                                     HasSettingValue="{x:Bind Appearance.HasFontFeatures, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.FontFeaturesOverrideSource, Mode=OneWay}"
@@ -439,8 +439,8 @@
             </local:SettingContainer>
 
             <!--  Builtin Glyphs  -->
-            <local:SettingContainer x:Uid="Profile_EnableBuiltinGlyphs"
-                                    x:Name="EnableBuiltinGlyphs"
+            <local:SettingContainer x:Name="EnableBuiltinGlyphs"
+                                    x:Uid="Profile_EnableBuiltinGlyphs"
                                     ClearSettingValue="{x:Bind Appearance.ClearEnableBuiltinGlyphs}"
                                     HasSettingValue="{x:Bind Appearance.HasEnableBuiltinGlyphs, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.EnableBuiltinGlyphsOverrideSource, Mode=OneWay}">
@@ -449,8 +449,8 @@
             </local:SettingContainer>
 
             <!--  Color Glyphs  -->
-            <local:SettingContainer x:Uid="Profile_EnableColorGlyphs"
-                                    x:Name="EnableColorGlyphs"
+            <local:SettingContainer x:Name="EnableColorGlyphs"
+                                    x:Uid="Profile_EnableColorGlyphs"
                                     ClearSettingValue="{x:Bind Appearance.ClearEnableColorGlyphs}"
                                     HasSettingValue="{x:Bind Appearance.HasEnableColorGlyphs, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.EnableColorGlyphsOverrideSource, Mode=OneWay}">
@@ -459,8 +459,8 @@
             </local:SettingContainer>
 
             <!--  Retro Terminal Effect  -->
-            <local:SettingContainer x:Uid="Profile_RetroTerminalEffect"
-                                    x:Name="RetroTerminalEffect"
+            <local:SettingContainer x:Name="RetroTerminalEffect"
+                                    x:Uid="Profile_RetroTerminalEffect"
                                     ClearSettingValue="{x:Bind Appearance.ClearRetroTerminalEffect}"
                                     HasSettingValue="{x:Bind Appearance.HasRetroTerminalEffect, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.RetroTerminalEffectOverrideSource, Mode=OneWay}">
@@ -469,8 +469,8 @@
             </local:SettingContainer>
 
             <!--  Adjust Indistinguishable Colors  -->
-            <local:SettingContainer x:Uid="Profile_AdjustIndistinguishableColors"
-                                    x:Name="AdjustIndistinguishableColors"
+            <local:SettingContainer x:Name="AdjustIndistinguishableColors"
+                                    x:Uid="Profile_AdjustIndistinguishableColors"
                                     ClearSettingValue="{x:Bind Appearance.ClearAdjustIndistinguishableColors}"
                                     HasSettingValue="{x:Bind Appearance.HasAdjustIndistinguishableColors, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.AdjustIndistinguishableColorsOverrideSource, Mode=OneWay}">
@@ -488,8 +488,8 @@
                        Style="{StaticResource TextBlockSubHeaderStyle}" />
 
             <!--  Cursor Shape  -->
-            <local:SettingContainer x:Uid="Profile_CursorShape"
-                                    x:Name="CursorShape"
+            <local:SettingContainer x:Name="CursorShape"
+                                    x:Uid="Profile_CursorShape"
                                     ClearSettingValue="{x:Bind Appearance.ClearCursorShape}"
                                     HasSettingValue="{x:Bind Appearance.HasCursorShape, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.CursorShapeOverrideSource, Mode=OneWay}">
@@ -501,8 +501,8 @@
             </local:SettingContainer>
 
             <!--  Cursor Height  -->
-            <local:SettingContainer x:Uid="Profile_CursorHeight"
-                                    x:Name="CursorHeight"
+            <local:SettingContainer x:Name="CursorHeight"
+                                    x:Uid="Profile_CursorHeight"
                                     ClearSettingValue="{x:Bind Appearance.ClearCursorHeight}"
                                     HasSettingValue="{x:Bind Appearance.HasCursorHeight, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.CursorHeightOverrideSource, Mode=OneWay}"
@@ -574,8 +574,8 @@
             </local:SettingContainer>
 
             <!--  Background Image Stretch Mode  -->
-            <local:SettingContainer x:Uid="Profile_BackgroundImageStretchMode"
-                                    x:Name="BackgroundImageStretchMode"
+            <local:SettingContainer x:Name="BackgroundImageStretchMode"
+                                    x:Uid="Profile_BackgroundImageStretchMode"
                                     ClearSettingValue="{x:Bind Appearance.ClearBackgroundImageStretchMode}"
                                     HasSettingValue="{x:Bind Appearance.HasBackgroundImageStretchMode, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.BackgroundImageStretchModeOverrideSource, Mode=OneWay}"
@@ -588,8 +588,8 @@
             </local:SettingContainer>
 
             <!--  Background Image Alignment  -->
-            <local:SettingContainer x:Uid="Profile_BackgroundImageAlignment"
-                                    x:Name="BackgroundImageAlignment"
+            <local:SettingContainer x:Name="BackgroundImageAlignment"
+                                    x:Uid="Profile_BackgroundImageAlignment"
                                     ClearSettingValue="{x:Bind Appearance.ClearBackgroundImageAlignment}"
                                     CurrentValue="{x:Bind Appearance.BackgroundImageAlignmentCurrentValue, Mode=OneWay}"
                                     HasSettingValue="{x:Bind Appearance.HasBackgroundImageAlignment, Mode=OneWay}"
@@ -777,8 +777,8 @@
             </local:SettingContainer>
 
             <!--  Background Image Opacity  -->
-            <local:SettingContainer x:Uid="Profile_BackgroundImageOpacity"
-                                    x:Name="BackgroundImageOpacity"
+            <local:SettingContainer x:Name="BackgroundImageOpacity"
+                                    x:Uid="Profile_BackgroundImageOpacity"
                                     ClearSettingValue="{x:Bind Appearance.ClearBackgroundImageOpacity}"
                                     HasSettingValue="{x:Bind Appearance.HasBackgroundImageOpacity, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.BackgroundImageOpacityOverrideSource, Mode=OneWay}"
@@ -804,8 +804,8 @@
                        Style="{StaticResource TextBlockSubHeaderStyle}" />
 
             <!--  Intense is bold, bright  -->
-            <local:SettingContainer x:Uid="Appearance_IntenseTextStyle"
-                                    x:Name="IntenseTextStyle"
+            <local:SettingContainer x:Name="IntenseTextStyle"
+                                    x:Uid="Appearance_IntenseTextStyle"
                                     ClearSettingValue="{x:Bind Appearance.ClearIntenseTextStyle}"
                                     HasSettingValue="{x:Bind Appearance.HasIntenseTextStyle, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Appearance.IntenseTextStyleOverrideSource, Mode=OneWay}">
