--- a/src/cascadia/TerminalSettingsEditor/EditColorScheme.xaml
+++ b/src/cascadia/TerminalSettingsEditor/EditColorScheme.xaml
@@ -200,8 +200,8 @@
             </Grid>
         </Border>
 
-        <local:SettingContainer x:Uid="ColorScheme_InboxSchemeDuplicate"
-                                x:Name="InboxSchemeDuplicate"
+        <local:SettingContainer x:Name="InboxSchemeDuplicate"
+                                x:Uid="ColorScheme_InboxSchemeDuplicate"
                                 Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(ViewModel.IsEditable), Mode=OneWay}">
             <Button x:Name="DuplicateSchemeButton"
                     x:Uid="ColorScheme_DuplicateButton"
@@ -209,8 +209,8 @@
                     Style="{StaticResource BrowseButtonStyle}" />
         </local:SettingContainer>
 
-        <local:SettingContainer x:Uid="ColorScheme_ColorsHeader"
-                                x:Name="ColorsHeader"
+        <local:SettingContainer x:Name="ColorsHeader"
+                                x:Uid="ColorScheme_ColorsHeader"
                                 StartExpanded="True"
                                 Style="{StaticResource ExpanderSettingContainerStyle}"
                                 Visibility="{x:Bind ViewModel.IsEditable, Mode=OneWay}">
