--- a/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
+++ b/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
@@ -28,8 +28,8 @@
 
     <StackPanel Style="{StaticResource SettingsStackStyle}">
         <!--  Theme  -->
-        <local:SettingContainer x:Uid="Globals_Theme"
-                                x:Name="Theme">
+        <local:SettingContainer x:Name="Theme"
+                                x:Uid="Globals_Theme">
             <ComboBox AutomationProperties.AccessibilityView="Content"
                       ItemsSource="{x:Bind ViewModel.ThemeList, Mode=OneWay}"
                       SelectedItem="{x:Bind ViewModel.CurrentTheme, Mode=TwoWay}"
@@ -43,8 +43,8 @@
         </local:SettingContainer>
 
         <!--  Position of new tab  -->
-        <local:SettingContainer x:Uid="Globals_NewTabPosition"
-                                x:Name="NewTabPosition">
+        <local:SettingContainer x:Name="NewTabPosition"
+                                x:Uid="Globals_NewTabPosition">
             <ComboBox AutomationProperties.AccessibilityView="Content"
                       ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                       ItemsSource="{x:Bind ViewModel.NewTabPositionList, Mode=OneWay}"
@@ -53,52 +53,52 @@
         </local:SettingContainer>
 
         <!--  Show Titlebar  -->
-        <local:SettingContainer x:Uid="Globals_ShowTitlebar"
-                                x:Name="ShowTitlebar">
+        <local:SettingContainer x:Name="ShowTitlebar"
+                                x:Uid="Globals_ShowTitlebar">
             <ToggleSwitch IsOn="{x:Bind ViewModel.ShowTabsInTitlebar, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}"
                           Toggled="{x:Bind ViewModel.ShowTitlebarToggled}" />
         </local:SettingContainer>
 
         <!--  Always show tabs  -->
-        <local:SettingContainer x:Uid="Globals_AlwaysShowTabs"
-                                x:Name="AlwaysShowTabs">
+        <local:SettingContainer x:Name="AlwaysShowTabs"
+                                x:Uid="Globals_AlwaysShowTabs">
             <ToggleSwitch IsEnabled="{x:Bind mtu:Converters.InvertBoolean(ViewModel.ShowTabsInTitlebar), Mode=OneWay}"
                           IsOn="{x:Bind ViewModel.AlwaysShowTabs, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Show tabs in full screen  -->
-        <local:SettingContainer x:Uid="Globals_ShowTabsFullscreen"
-                                x:Name="ShowTabsFullscreen">
+        <local:SettingContainer x:Name="ShowTabsFullscreen"
+                                x:Uid="Globals_ShowTabsFullscreen">
             <ToggleSwitch IsOn="{x:Bind ViewModel.ShowTabsFullscreen, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Show Acrylic in Tab Row  -->
-        <local:SettingContainer x:Uid="Globals_AcrylicTabRow"
-                                x:Name="AcrylicTabRow">
+        <local:SettingContainer x:Name="AcrylicTabRow"
+                                x:Uid="Globals_AcrylicTabRow">
             <ToggleSwitch IsOn="{x:Bind ViewModel.UseAcrylicInTabRow, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Show Title in Titlebar  -->
-        <local:SettingContainer x:Uid="Globals_ShowTitleInTitlebar"
-                                x:Name="ShowTitleInTitlebar">
+        <local:SettingContainer x:Name="ShowTitleInTitlebar"
+                                x:Uid="Globals_ShowTitleInTitlebar">
             <ToggleSwitch IsOn="{x:Bind ViewModel.ShowTitleInTitlebar, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Always on Top  -->
-        <local:SettingContainer x:Uid="Globals_AlwaysOnTop"
-                                x:Name="AlwaysOnTop">
+        <local:SettingContainer x:Name="AlwaysOnTop"
+                                x:Uid="Globals_AlwaysOnTop">
             <ToggleSwitch IsOn="{x:Bind ViewModel.AlwaysOnTop, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Tab Width Mode  -->
-        <local:SettingContainer x:Uid="Globals_TabWidthMode"
-                                x:Name="TabWidthMode">
+        <local:SettingContainer x:Name="TabWidthMode"
+                                x:Uid="Globals_TabWidthMode">
             <ComboBox AutomationProperties.AccessibilityView="Content"
                       ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                       ItemsSource="{x:Bind ViewModel.TabWidthModeList, Mode=OneWay}"
@@ -108,43 +108,43 @@
 
         <!--  Disable Animations  -->
         <!--  NOTE: the UID is "DisablePaneAnimationsReversed" not "DisablePaneAnimations". See GH#9124 for more details.  -->
-        <local:SettingContainer x:Uid="Globals_DisableAnimationsReversed"
-                                x:Name="DisableAnimations">
+        <local:SettingContainer x:Name="DisableAnimations"
+                                x:Uid="Globals_DisableAnimationsReversed">
             <ToggleSwitch IsOn="{x:Bind ViewModel.InvertedDisableAnimations, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Always Show Notification Icon  -->
-        <local:SettingContainer x:Uid="Globals_AlwaysShowNotificationIcon"
-                                x:Name="AlwaysShowNotificationIcon">
+        <local:SettingContainer x:Name="AlwaysShowNotificationIcon"
+                                x:Uid="Globals_AlwaysShowNotificationIcon">
             <ToggleSwitch IsOn="{x:Bind ViewModel.AlwaysShowNotificationIcon, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Minimize To Notification Area  -->
-        <local:SettingContainer x:Uid="Globals_MinimizeToNotificationArea"
-                                x:Name="MinimizeToNotificationArea">
+        <local:SettingContainer x:Name="MinimizeToNotificationArea"
+                                x:Uid="Globals_MinimizeToNotificationArea">
             <ToggleSwitch IsOn="{x:Bind ViewModel.MinimizeToNotificationArea, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Automatically hide window  -->
-        <local:SettingContainer x:Uid="Globals_AutoHideWindow"
-                                x:Name="AutoHideWindow">
+        <local:SettingContainer x:Name="AutoHideWindow"
+                                x:Uid="Globals_AutoHideWindow">
             <ToggleSwitch IsOn="{x:Bind ViewModel.AutoHideWindow, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Show Admin Shield  -->
-        <local:SettingContainer x:Uid="Globals_ShowAdminShield"
-                                x:Name="ShowAdminShield">
+        <local:SettingContainer x:Name="ShowAdminShield"
+                                x:Uid="Globals_ShowAdminShield">
             <ToggleSwitch IsOn="{x:Bind ViewModel.ShowAdminShield, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
         <!--  Enable Unfocused Acrylic  -->
-        <local:SettingContainer x:Uid="Globals_EnableUnfocusedAcrylic"
-                                x:Name="EnableUnfocusedAcrylic">
+        <local:SettingContainer x:Name="EnableUnfocusedAcrylic"
+                                x:Uid="Globals_EnableUnfocusedAcrylic">
             <ToggleSwitch IsOn="{x:Bind ViewModel.EnableUnfocusedAcrylic, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
