--- a/src/cascadia/TerminalSettingsEditor/Profiles_Terminal.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Terminal.xaml
@@ -32,8 +32,8 @@
                     Style="{StaticResource SettingsStackStyle}">
 
             <!--  Suppress Application Title  -->
-            <local:SettingContainer x:Uid="Profile_SuppressApplicationTitle"
-                                    x:Name="SuppressApplicationTitle"
+            <local:SettingContainer x:Name="SuppressApplicationTitle"
+                                    x:Uid="Profile_SuppressApplicationTitle"
                                     ClearSettingValue="{x:Bind Profile.ClearSuppressApplicationTitle}"
                                     HasSettingValue="{x:Bind Profile.HasSuppressApplicationTitle, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Profile.SuppressApplicationTitleOverrideSource, Mode=OneWay}">
@@ -42,8 +42,8 @@
             </local:SettingContainer>
 
             <!--  Force VT Input  -->
-            <local:SettingContainer x:Uid="Profile_ForceVTInput"
-                                    x:Name="ForceVTInput"
+            <local:SettingContainer x:Name="ForceVTInput"
+                                    x:Uid="Profile_ForceVTInput"
                                     ClearSettingValue="{x:Bind Profile.ClearForceVTInput}"
                                     HasSettingValue="{x:Bind Profile.HasForceVTInput, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Profile.ForceVTInputOverrideSource, Mode=OneWay}">
@@ -52,8 +52,8 @@
             </local:SettingContainer>
 
             <!--  Allow VT Checksum Report  -->
-            <local:SettingContainer x:Uid="Profile_AllowVtChecksumReport"
-                                    x:Name="AllowVtChecksumReport"
+            <local:SettingContainer x:Name="AllowVtChecksumReport"
+                                    x:Uid="Profile_AllowVtChecksumReport"
                                     ClearSettingValue="{x:Bind Profile.ClearAllowVtChecksumReport}"
                                     HasSettingValue="{x:Bind Profile.HasAllowVtChecksumReport, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Profile.AllowVtChecksumReportOverrideSource, Mode=OneWay}">
@@ -62,8 +62,8 @@
             </local:SettingContainer>
 
             <!--  Allow VT Clipboard Writing  -->
-            <local:SettingContainer x:Uid="Profile_AllowVtClipboardWrite"
-                                    x:Name="AllowVtClipboardWrite"
+            <local:SettingContainer x:Name="AllowVtClipboardWrite"
+                                    x:Uid="Profile_AllowVtClipboardWrite"
                                     ClearSettingValue="{x:Bind Profile.ClearAllowVtClipboardWrite}"
                                     HasSettingValue="{x:Bind Profile.HasAllowVtClipboardWrite, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Profile.AllowVtClipboardWriteOverrideSource, Mode=OneWay}">
@@ -72,8 +72,8 @@
             </local:SettingContainer>
 
             <!--  Answerback Message  -->
-            <local:SettingContainer x:Uid="Profile_AnswerbackMessage"
-                                    x:Name="AnswerbackMessage"
+            <local:SettingContainer x:Name="AnswerbackMessage"
+                                    x:Uid="Profile_AnswerbackMessage"
                                     ClearSettingValue="{x:Bind Profile.ClearAnswerbackMessage}"
                                     CurrentValue="{x:Bind Profile.AnswerbackMessagePreview, Mode=OneWay}"
                                     HasSettingValue="{x:Bind Profile.HasAnswerbackMessage, Mode=OneWay}"
