--- a/src/cascadia/TerminalSettingsEditor/Rendering.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Rendering.xaml
@@ -24,8 +24,8 @@
     </Page.Resources>
 
     <StackPanel Style="{StaticResource SettingsStackStyle}">
-        <local:SettingContainer x:Uid="Globals_GraphicsAPI"
-                                x:Name="GraphicsAPI">
+        <local:SettingContainer x:Name="GraphicsAPI"
+                                x:Uid="Globals_GraphicsAPI">
             <ComboBox AutomationProperties.AccessibilityView="Content"
                       ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                       ItemsSource="{x:Bind ViewModel.GraphicsAPIList}"
@@ -33,14 +33,14 @@
                       Style="{StaticResource ComboBoxSettingStyle}" />
         </local:SettingContainer>
 
-        <local:SettingContainer x:Uid="Globals_DisablePartialInvalidation"
-                                x:Name="DisablePartialInvalidation">
+        <local:SettingContainer x:Name="DisablePartialInvalidation"
+                                x:Uid="Globals_DisablePartialInvalidation">
             <ToggleSwitch IsOn="{x:Bind ViewModel.DisablePartialInvalidation, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
 
-        <local:SettingContainer x:Uid="Globals_SoftwareRendering"
-                                x:Name="SoftwareRendering">
+        <local:SettingContainer x:Name="SoftwareRendering"
+                                x:Uid="Globals_SoftwareRendering">
             <ToggleSwitch IsOn="{x:Bind ViewModel.SoftwareRendering, Mode=TwoWay}"
                           Style="{StaticResource ToggleSwitchInExpanderStyle}" />
         </local:SettingContainer>
