--- a/src/cascadia/TerminalSettingsEditor/Actions.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Actions.xaml
@@ -189,7 +189,7 @@
             <HyperlinkButton x:Uid="Actions_Disclaimer"
                              Margin="0"
                              Padding="0"
-                             NavigateUri="https://learn.microsoft.com/en-us/windows/terminal/customize-settings/actions" />
+                             NavigateUri="https://go.microsoft.com/fwlink/?linkid=2341386"/>
             <!--  Add New Button  -->
             <Button x:Name="AddNewButton"
                     Margin="0,12,0,0"
